[package]
name = "henri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version ="0.4", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["blocking"] }
url = "2.5.0"

[dev-dependencies]
env_logger = "0.11.0"
